force-app/main/default/objects/Sales_Support__c/Sales_Support__c.object-meta.xml
<CustomObject>
    <description>Custom Object for RFP/RFI Activity and Results</description>
    <label>Sales Support Activity</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Support #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Support Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>