force-app/main/default/objects/Sales_Support__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <description>Account Classification of Opportunity Account</description>
    <formula>Text(Opportunity__r.Account.Account_Classification__c)</formula>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>