force-app/main/default/objects/Sales_Support__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Opportunity__r.Account.Owner.LastName + &apos;, &apos; + Opportunity__r.Account.Owner.FirstName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>