force-app/main/default/objects/Sales_Support__c/fields/Account_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Country__c</fullName>
    <formula>IF(ISBLANK(Opportunity__r.Account.ShippingCountry),  Opportunity__r.Account.BillingCountry,(Opportunity__r.Account.ShippingCountry))</formula>
    <label>Account Shipping Country</label>
    <type>Text</type>
</CustomField>