force-app/main/default/objects/Sales_Support__c/fields/Account_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_State__c</fullName>
    <formula>IF(ISBLANK(Opportunity__r.Account.ShippingState),  Opportunity__r.Account.BillingState,(Opportunity__r.Account.ShippingState))</formula>
    <label>Account Shipping State</label>
    <type>Text</type>
</CustomField>