force-app/main/default/objects/Sales_Support__c/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <description>Opportunity account Territory</description>
    <formula>Text( Opportunity__r.Account.Territory__c )</formula>
    <label>Account Territory</label>
    <type>Text</type>
</CustomField>