force-app/main/default/objects/Sales_Support__c/fields/Cloned_Record__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes whether record is a cloned record</description>
    <inlineHelpText>This field denotes whether record is a cloned record</inlineHelpText>
    <label>Cloned Record</label>
    <type>Checkbox</type>
</CustomField>