force-app/main/default/objects/Sales_Support__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>Owner: Sales Enablement (Gina Imirie)
Description: The filed is used to enter the Competitors of related Opportunity for Evaluation Sales Support Activity Record</description>
    <label>Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>