force-app/main/default/objects/Sales_Support__c/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <description>Date that the RFP/RFI was completed and processed for submittal.</description>
    <label>Complete Date</label>
    <type>Date</type>
</CustomField>