force-app/main/default/objects/Sales_Support__c/fields/Completion_By__c.field-meta.xml
<CustomField>
    <fullName>Completion_By__c</fullName>
    <label>Completion By</label>
    <type>Date</type>
</CustomField>