force-app/main/default/objects/Sales_Support__c/fields/CSM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner: Sales Enablement (Gina Imirie)
Description: The filed is used to enter the CSM assigned for Evaluation Sales Support Activity Record</description>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Support_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>