force-app/main/default/objects/Sales_Support__c/fields/Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_Scheduled__c</fullName>
    <description>Date that RFP/RFI is scheduled to be due by the Account/Opportunity.</description>
    <label>Date Scheduled</label>
    <type>Date</type>
</CustomField>