force-app/main/default/objects/Sales_Support__c/fields/Est_Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Savings__c</fullName>
    <label>Est Annual Savings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>