force-app/main/default/objects/Sales_Support__c/fields/Fleet_Size1__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size1__c</fullName>
    <formula>IF
(
    NOT( ISBLANK(Opportunity__r.Editable_Opportunity_Qty__c)), Opportunity__r.Editable_Opportunity_Qty__c,
    IF( 
		NOT( ISBLANK( Opportunity__r.TotalOpportunityQuantity )),Opportunity__r.TotalOpportunityQuantity,
		IF(
			NOT( ISBLANK( Opportunity__r.Account.Self_Reported_Fleet_Size__c )), Opportunity__r.Account.Self_Reported_Fleet_Size__c, Opportunity__r.Account.Fleet_Size__c
		)
	)
)</formula>
    <label>Fleet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>