force-app/main/default/objects/Sales_Support__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <label>Fleet SizeOld</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>