force-app/main/default/objects/Sales_Support__c/fields/Legacy_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Source ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>