force-app/main/default/objects/Sales_Support__c/fields/Mileage_Savings__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Savings__c</fullName>
    <label>Mileage Savings</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>