force-app/main/default/objects/Sales_Support__c/fields/Onsite__c.field-meta.xml
<CustomField>
    <fullName>Onsite__c</fullName>
    <label>Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>