force-app/main/default/objects/Sales_Support__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated with this RFP/RFI.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N300000015omEEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>