force-app/main/default/objects/Sales_Support__c/fields/Opportunity_Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Territory__c</fullName>
    <description>Opportunity Owner Territory field is created in Sales Support Activity to facilitate the field in Email Template</description>
    <formula>Text(Opportunity__r.Owner.Territory__c)</formula>
    <label>Opportunity Owner Territory</label>
    <type>Text</type>
</CustomField>