force-app/main/default/objects/Sales_Support__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>Opportunity__r.Owner_Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>