force-app/main/default/objects/Sales_Support__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Products specifically involved with this RFP.</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active Alert</fullName>
            </value>
            <value>
                <fullName>ALK Co-Pilot</fullName>
            </value>
            <value>
                <fullName>AMG</fullName>
            </value>
            <value>
                <fullName>AMG-C</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>RNA HOS</fullName>
                <label>Compliance</label>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>RNA Dispatching</fullName>
                <label>Dispatch</label>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>RDC-DVIR</fullName>
                <label>DVIR</label>
            </value>
            <value>
                <fullName>Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>FleetLoader</label>
            </value>
            <value>
                <fullName>Grove</fullName>
            </value>
            <value>
                <fullName>RDC HOS</fullName>
                <label>HOS</label>
            </value>
            <value>
                <fullName>Insight</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>MC Server</fullName>
                <label>MobileCast</label>
            </value>
            <value>
                <fullName>Mobile Manager</fullName>
            </value>
            <value>
                <fullName>Mobile Tracking</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Omnitracs Analytics</fullName>
            </value>
            <value>
                <fullName>Per Diem Manager</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>PTO Monitoring</fullName>
            </value>
            <value>
                <fullName>Resolve</fullName>
            </value>
            <value>
                <fullName>OT1 Mobile</fullName>
                <label>RN Mobile</label>
            </value>
            <value>
                <fullName>RN</fullName>
                <label>Roadnet</label>
            </value>
            <value>
                <fullName>Roadnet Anywhere</fullName>
                <label>Routing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>