force-app/main/default/objects/Sales_Support__c/fields/Products_Omni_XRS__c.field-meta.xml
<CustomField>
    <fullName>Products_Omni_XRS__c</fullName>
    <label>Products - Omni XRS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MCP</fullName>
            </value>
            <value>
                <fullName>Omnitracs Analytics</fullName>
            </value>
            <value>
                <fullName>Roadnet Software</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>