force-app/main/default/objects/Sales_Support__c/fields/PS_Resource_Assigned__c.field-meta.xml
<CustomField>
    <fullName>PS_Resource_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner: Sales Enablement (Gina Imirie)
Description: The filed is used to enter the PS Resource assigned for Evaluation Sales Support Activity Record</description>
    <label>PS Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Support_Activities2</relationshipName>
    <type>Lookup</type>
</CustomField>