force-app/main/default/objects/Sales_Support__c/fields/PS_Resources__c.field-meta.xml
<CustomField>
    <fullName>PS_Resources__c</fullName>
    <label>PS Resources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bowser, Amy</fullName>
            </value>
            <value>
                <fullName>Cooper, Lynn</fullName>
            </value>
            <value>
                <fullName>Dovgin, Don</fullName>
            </value>
            <value>
                <fullName>Fiore, Vince</fullName>
            </value>
            <value>
                <fullName>Hove, Chris</fullName>
            </value>
            <value>
                <fullName>Johnson, Chris</fullName>
            </value>
            <value>
                <fullName>Zibdeh, Tawfiq</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>