force-app/main/default/objects/Sales_Support__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>Date that RFP/RFI was initially received from the Account/Opportunity for review by UPSLT.</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>