force-app/main/default/objects/Sales_Support__c/fields/Request_Date1__c.field-meta.xml
<CustomField>
    <fullName>Request_Date1__c</fullName>
    <formula>CreatedDate</formula>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>