force-app/main/default/objects/Sales_Support__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date of initial RFP request from Account Manager.</description>
    <label>Request Dateold</label>
    <type>Date</type>
</CustomField>