force-app/main/default/objects/Sales_Support__c/fields/RFP_Notes__c.field-meta.xml
<CustomField>
    <fullName>RFP_Notes__c</fullName>
    <description>Any applicable notes.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>