force-app/main/default/objects/Sales_Support__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <description>Opportunity Account Sales Director</description>
    <formula>Opportunity__r.Account.User_Sales_Director__c</formula>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>