force-app/main/default/objects/Sales_Support__c/fields/SE_User__c.field-meta.xml
<CustomField>
    <fullName>SE_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Engineer with primary responsibility for executing this RFP.</description>
    <label>Primary Managed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N300000015okmEAA</relationshipName>
    <type>Lookup</type>
</CustomField>