force-app/main/default/objects/Sales_Support__c/fields/Secondary_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Managed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Managed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Support_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>