force-app/main/default/objects/Sales_Support__c/fields/Send_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tied to a workflow that will send an email alert out to the Managed By and account owner if checkbox is set.</description>
    <label>Send Notification Email</label>
    <type>Checkbox</type>
</CustomField>