force-app/main/default/objects/Sales_Support__c/fields/Services_Requested__c.field-meta.xml
<CustomField>
    <fullName>Services_Requested__c</fullName>
    <label>Services Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Database Maintenance</fullName>
            </value>
            <value>
                <fullName>Database Migration</fullName>
            </value>
            <value>
                <fullName>Hardware\Software Visio</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>ID Conversion</fullName>
            </value>
            <value>
                <fullName>Upgrade_Scoping</fullName>
                <label>Upgrade Scoping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>