force-app/main/default/objects/Sales_Support__c/fields/SR_User__c.field-meta.xml
<CustomField>
    <fullName>SR_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Rep who owns the Account and Opportunity for this RFP.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N300000015okTEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>