force-app/main/default/objects/Sales_Support__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of RFP.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10% Discount Approved</fullName>
            </value>
            <value>
                <fullName>5% Discount Approved</fullName>
            </value>
            <value>
                <fullName>Active Sales Cycle</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved by Deal Desk</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined by RTI</fullName>
            </value>
            <value>
                <fullName>Declined to Respond</fullName>
            </value>
            <value>
                <fullName>Deferred to Rep</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Estimate Submitted</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Hold/Delayed</fullName>
            </value>
            <value>
                <fullName>Presentation Provided</fullName>
            </value>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>Returned for Correction</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted to PM</fullName>
            </value>
            <value>
                <fullName>Submitted to PS (1)</fullName>
            </value>
            <value>
                <fullName>Submitted to PS (2)</fullName>
            </value>
            <value>
                <fullName>Waiting for Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>