force-app/main/default/objects/Sales_Support__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Route Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>