force-app/main/default/objects/Sales_Support__c/fields/Time_Savings__c.field-meta.xml
<CustomField>
    <fullName>Time_Savings__c</fullName>
    <label>Time Savings</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>