force-app/main/default/objects/Sales_Support__c/fields/TW_Increase__c.field-meta.xml
<CustomField>
    <fullName>TW_Increase__c</fullName>
    <label>TW Increase</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>