force-app/main/default/objects/Sales_Support__c/fields/Vehicle_Savings__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Savings__c</fullName>
    <label>Vehicle Savings</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>