force-app/main/default/objects/Sales_Support__c/recordTypes/Architecture_Scoping.recordType-meta.xml
<RecordType>
    <fullName>Architecture_Scoping</fullName>
    <active>true</active>
    <description>For RTS Prospects that exceed the min. specs. Server Env will be scoped to meet needs</description>
    <label>Architecture Scoping</label>
</RecordType>