force-app/main/default/objects/Sales_Support__c/recordTypes/Data_Validation.recordType-meta.xml
<RecordType>
    <fullName>Data_Validation</fullName>
    <active>true</active>
    <description>PS discount applied after data validated.</description>
    <label>Data Validation</label>
</RecordType>