force-app/main/default/objects/Sales_Support__c/recordTypes/Demo.recordType-meta.xml
<RecordType>
    <fullName>Demo</fullName>
    <active>true</active>
    <description>Request to demonstrate our software</description>
    <label>Demo</label>
</RecordType>