force-app/main/default/objects/Sales_Support__c/recordTypes/Deployment_Support.recordType-meta.xml
<RecordType>
    <fullName>Deployment_Support</fullName>
    <active>true</active>
    <description>Post-Sale SE assistance with ensuring the migration or implementation by the PS team is aligned with the sales strategy.</description>
    <label>Deployment Support</label>
</RecordType>