force-app/main/default/objects/Sales_Support__c/recordTypes/Discovery.recordType-meta.xml
<RecordType>
    <fullName>Discovery</fullName>
    <active>true</active>
    <description>An initial discussion to develop the opportunity</description>
    <label>Discovery</label>
</RecordType>