force-app/main/default/objects/Sales_Support__c/recordTypes/Evals_Pilot.recordType-meta.xml
<RecordType>
    <fullName>Evals_Pilot</fullName>
    <active>true</active>
    <description>Short term pre-sales engagement to convince prospect of our value. Ultimate goal is to win a larger opportunity.</description>
    <label>Evaluation</label>
</RecordType>