force-app/main/default/objects/Sales_Support__c/recordTypes/Gap_Analysis.recordType-meta.xml
<RecordType>
    <fullName>Gap_Analysis</fullName>
    <active>false</active>
    <description>The request to research potential gaps that are inhibiting the success of an opportunity</description>
    <label>Gap Analysis</label>
</RecordType>