force-app/main/default/objects/Sales_Support__c/recordTypes/Operations_Analysis.recordType-meta.xml
<RecordType>
    <fullName>Operations_Analysis</fullName>
    <active>true</active>
    <description>REP Analysis, ROI Analysis, Operations Assessment or Business Process Review.</description>
    <label>Operations Analysis</label>
</RecordType>