force-app/main/default/objects/Sales_Support__c/recordTypes/RFI.recordType-meta.xml
<RecordType>
    <fullName>RFI</fullName>
    <active>true</active>
    <description>Request for Information</description>
    <label>RFI</label>
</RecordType>