force-app/main/default/objects/Sales_Support__c/recordTypes/RFP.recordType-meta.xml
<RecordType>
    <fullName>RFP</fullName>
    <active>true</active>
    <description>Request for Proposal</description>
    <label>RFP</label>
</RecordType>