force-app/main/default/objects/Sales_Support__c/recordTypes/RNA_Qualification.recordType-meta.xml
<RecordType>
    <fullName>RNA_Qualification</fullName>
    <active>true</active>
    <description>Approval process for any bridge or conversion Perpetual to SaaS</description>
    <label>RNA_Qualification</label>
</RecordType>