force-app/main/default/objects/Sales_Support__c/recordTypes/Security_Documents.recordType-meta.xml
<RecordType>
    <fullName>Security_Documents</fullName>
    <active>true</active>
    <description>Questions re: SaaS, Data Security, Environments, Disaster Recovery etc.</description>
    <label>Security Documents</label>
</RecordType>