force-app/main/default/objects/Sales_Support__c/recordTypes/Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>Technical_Support</fullName>
    <active>true</active>
    <description>Any activity requested to support technical calls/meetings/questions related to interface, architecture, or product</description>
    <label>Technical Support</label>
</RecordType>