force-app/main/default/objects/Sales_Support__c/recordTypes/VE_Assist.recordType-meta.xml
<RecordType>
    <fullName>VE_Assist</fullName>
    <active>true</active>
    <description>Build value assessment for an ROI including use of VE tool</description>
    <label>VE Assist</label>
</RecordType>