force-app/main/default/objects/Sales_Support__c/listViews/All_Gina_s_Activity.listView-meta.xml
<ListView>
    <fullName>All_Gina_s_Activity</fullName>
    <columns>NAME</columns>
    <columns>SE_User__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Received_Date__c</columns>
    <columns>Date_Scheduled__c</columns>
    <columns>Complete_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SE_User__c</field>
        <operation>contains</operation>
        <value>Imirie</value>
    </filters>
    <filters>
        <field>Request_Date1__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2017</value>
    </filters>
    <label>All Gina&apos;s Activity</label>
    <language>en_US</language>
    <sharedTo>
        <group>SSA_views_Gina</group>
    </sharedTo>
</ListView>